...
        
        //if we have an actual amount then move forward with the rest of deduction logic
        guard let deductionAmount = deductionAmountTextField.text, !deductionAmount.isEmpty
        else
        {
            //Display an alert showing that textfield text is empty
            let alertController = UIAlertController(title:"Field Error", message: "Field is mandatory", preferredStyle: .alert)
            let OKAction = UIAlertAction(title: "OK", style: .default) { action in}
            alertController.addAction(OKAction)
            self.present(alertController, animated: true)
            return
        }
        //let the interactor send the reqeust to the server
...
